<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="Sergei_Smirnov">Сергей smrbanker Смирнов</string>
    <string name="Nikita_Saltykov">Никита xVerlink Салтыков</string>
    <string name="Dmitry_Schukin">Дмитрий Щукин</string>
    <string name="Ekaterina_Alekseeva">Екатерина ZAZAZLIK Алексеева</string>
    <string name="vacancies_search">Поиск вакансий</string>
    <string name="enter_query">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="cannot_get_vacancies_list">Не удалось получить список вакансий</string>
    <string name="favorites">Избранное</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="team">Команда</string>
    <string name="working_on_the_app">Над приложением работали</string>
    <string name="vacancy">Вакансия</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="requested_experience">Требуемый опыт</string>
    <string name="filtration_settings">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="main">Главная</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от %1$s %2$s</string>
    <string name="salary_to">до %1$s %2$s</string>
    <string name="salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="contacts">Контакты</string>
    <plurals name="vacancies_found">
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="choosing_workplace">Выбор места работы</string>
    <string name="choosing_country">Выбор страны</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choosing_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="failed_getting_list">Не удалось получить список</string>
    <string name="region_is_not_found">Такого региона нет</string>
    <string name="industry_toolbar">Выбор отрасли</string>
    <string name="industry_hint">Введите отрасль</string>
    <string name="cannot_get_industry_list">Не удалось получить список отраслей</string>
    <string name="choose">Выбрать</string>
    <string name="url_unavailable">Ссылка недоступна</string>
    <string name="vacancy_link">Ссылка на вакансию</string>
    <string name="check_net">Проверьте подключение к интернету</string>
</resources>
