<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context="ui.vacancy.fragment.FiltrationSettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/filtration_settings"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <TextView
        android:id="@+id/workplace"
        style="@style/DefaultTextMedium"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="start|center"
        android:layout_marginHorizontal="16dp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        android:text="@string/workplace"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/industry"
        style="@style/DefaultTextMedium"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="start|center"
        android:layout_marginHorizontal="16dp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        android:text="@string/industry"
        android:textColor="@color/gray" />

    <!-- Возможно тут уедет hint и placeholder при вводе текста. Надо будет тестить  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textInputFilledStyle"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeWidth="0dp"
        android:hint="@string/expected_salary"
        android:textColorHint="@color/gray_to_white"
        app:expandedHintEnabled="false"
        app:placeholderText="@string/enter_amount"
        app:placeholderTextColor="@color/gray_to_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_12dp"
            android:backgroundTint="@color/light_gray_to_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:layoutDirection="rtl"
        android:text="@string/dont_show_without_salary"
        android:textAppearance="@style/DefaultTextMedium"
        app:buttonTint="@color/blue"
        app:buttonIconTint="@color/white" />
</LinearLayout>
