<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.practicum.android.diploma.ui.industry.IndustryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/industry_toolbar"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/search_frame"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginVertical="@dimen/spacing_8"
        android:background="@drawable/rounded_12dp"
        android:backgroundTint="@color/light_gray_to_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/search_edit"
            style="@style/Industry_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_14"
            android:layout_marginEnd="60dp"
            android:hint="@string/industry_hint"
            android:textColorHint="@color/gray_to_white"
            android:textFontWeight="400"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/spacing_12"
            android:src="@drawable/ic_search"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/spacing_12"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/industry_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_frame"
        tools:itemCount="5"
        tools:listitem="@layout/item_industry" />

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/spacing_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/image_wrong_query_placeholder"/>

        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginHorizontal="@dimen/spacing_46"
            style="@style/DefaultTextMedium"
            android:textSize="@dimen/text_size_22"
            tools:text="@string/cannot_get_industry_list"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="gone" />

    <Button
        android:id="@+id/industry_apply"
        style="@style/Filter_Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60"
        android:layout_marginHorizontal="@dimen/spacing_17"
        android:layout_marginBottom="@dimen/spacing_24"
        android:backgroundTint="@color/blue"
        android:text="@string/choose"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/spacing_12"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
