<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    tools:context=".ui.filtration.FiltrationRegionFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/choosing_region"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:navigationIconTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="@dimen/spacing_16"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_12dp"
            android:backgroundTint="@color/light_gray_to_gray"
            android:paddingStart="@dimen/spacing_16"
            android:hint="@string/enter_region"
            android:textColorHint="@color/gray_to_white"
            style="@style/DefaultTextRegular"
            android:textColor="@color/black"
            android:imeOptions="actionDone"/>

        <ImageView
            android:id="@+id/icon_lens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/spacing_16"
            android:src="@drawable/ic_search"/>

        <ImageView
            android:id="@+id/clear_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/spacing_16"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_layout"
        app:layout_constraintStart_toStartOf="parent"/>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/spacing_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/image_nothing_found"/>

        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginHorizontal="@dimen/spacing_46"
            style="@style/DefaultTextMedium"
            android:textSize="@dimen/text_size_22"
            tools:text="@string/region_is_not_found"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
