<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="ui.vacancy.fragment.VacancyFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/vacancy"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:src="@drawable/ic_like_outlined"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/image_vacancy_not_found" />

        <TextView
            android:id="@+id/placeholder_text"
            style="@style/DefaultTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="16dp"
            android:textSize="22sp"
            tools:text="@string/vacancy_not_found_or_deleted" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/vacancy_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Android-разработчик" />

    <TextView
        android:id="@+id/vacancy_salary"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/vacancy_title"
        tools:text="От 100 000 Р." />

    <LinearLayout
        android:id="@+id/company_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_12dp"
        android:backgroundTint="@color/light_gray"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/vacancy_salary">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_name"
                style="@style/DefaultTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:text="ЕДА" />

            <TextView
                android:id="@+id/company_location"
                style="@style/DefaultTextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Москва" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/requested_experience"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/company_info_layout"
        tools:text="@string/requested_experience" />

    <TextView
        android:id="@+id/experience"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/requested_experience"
        tools:text="От 1 года до 3 лет" />


    <LinearLayout
        android:id="@+id/schedule_and_employment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/experience">

        <TextView
            android:id="@+id/schedule"
            style="@style/DefaultTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="Полная занятость, " />

        <TextView
            android:id="@+id/employment"
            style="@style/DefaultTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="Удаленная работа" />
    </LinearLayout>

    <TextView
        android:id="@+id/vacancy_description"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/schedule_and_employment_layout"
        tools:text="Описание вакансии" />

    <TextView
        android:id="@+id/responsibilities"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/vacancy_description"
        tools:text="Обязанности" />

    <TextView
        android:id="@+id/requirements"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/responsibilities"
        tools:text="Требования" />

    <TextView
        android:id="@+id/conditions"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/requirements"
        tools:text="Условия" />

    <TextView
        android:id="@+id/key_skills"
        style="@style/DefaultTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/conditions"
        tools:text="Ключевые навыки" />
</androidx.constraintlayout.widget.ConstraintLayout>
